# RunFFmpeg

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/hor/runffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  zyj-lib.cpp
app/src/main/java/com/hor/runffmpeg/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/hor/runffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
